--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ android:
   - extra-android-support
   - extra-android-m2repository
 script:
-- ./gradlew :app:assembleDebug
+- ./gradlew :app:assembleRelease
+before_install:
+- openssl aes-256-cbc -K $encrypted_59c5087c0788_key -iv $encrypted_59c5087c0788_iv
+  -in dy.keystore.enc -out keys/dy.keystore -d
