auto release apk to fir.im

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,8 @@ deploy:
     repo: archmages/DYWeather
     tags: true
     all_branches: true
+
+before_install:
+- gem install fir-cli
+after_deploy:
+- fir p app/build/outputs/apk/app-release.apk -T $FIR_TOKEN -c "`git cat-file tag $TRAVIS_TAG`"
